NIFI-13354: - Adding support for banner text.

--- a/nifi-frontend/src/main/frontend/apps/nifi/src/app/app.component.html
+++ b/nifi-frontend/src/main/frontend/apps/nifi/src/app/app.component.html
@@ -21,6 +21,16 @@
             <mat-spinner color="warn"></mat-spinner>
         </div>
     </div>
+} @else {
+    <div class="flex flex-col h-screen">
+        @if (bannerText(); as bannerText) {
+            <banner-text [banner]="bannerText.headerText"></banner-text>
+        }
+        <div class="flex-1">
+            <router-outlet></router-outlet>
+        </div>
+        @if (bannerText(); as bannerText) {
+            <banner-text [banner]="bannerText.footerText"></banner-text>
+        }
+    </div>
 }
-
-<router-outlet></router-outlet>
