--- a/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/flow-designer/ui/canvas/graph-controls/graph-controls.component.html
+++ b/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/flow-designer/ui/canvas/graph-controls/graph-controls.component.html
@@ -15,9 +15,11 @@
   ~ limitations under the License.
   -->
 
-<div class="graph-controls flex flex-col gap-y-0.5">
-    <navigation-control [shouldDockWhenCollapsed]="(operationCollapsed$ | async)!"></navigation-control>
-    <operation-control
-        [shouldDockWhenCollapsed]="(navigationCollapsed$ | async)!"
-        [breadcrumbEntity]="(breadcrumbEntity$ | async)!"></operation-control>
+<div class="relative">
+    <div class="graph-controls flex flex-col gap-y-0.5">
+        <navigation-control [shouldDockWhenCollapsed]="(operationCollapsed$ | async)!"></navigation-control>
+        <operation-control
+            [shouldDockWhenCollapsed]="(navigationCollapsed$ | async)!"
+            [breadcrumbEntity]="(breadcrumbEntity$ | async)!"></operation-control>
+    </div>
 </div>
