--- a/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/settings/feature/settings.component.html
+++ b/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/settings/feature/settings.component.html
@@ -15,7 +15,7 @@
   ~ limitations under the License.
   -->
 
-<div class="flex flex-col h-screen justify-between">
+<div class="flex flex-col h-full">
     <header class="mb-5 nifi-header">
         <navigation></navigation>
     </header>
@@ -35,7 +35,7 @@
                 }
             </nav>
         </div>
-        <div class="pt-5 flex-1">
+        <div class="mt-5 flex-1">
             <mat-tab-nav-panel #tabPanel>
                 <router-outlet></router-outlet>
             </mat-tab-nav-panel>
