--- a/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/summary/feature/summary.component.scss
+++ b/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/summary/feature/summary.component.scss
@@ -15,7 +15,9 @@
  * limitations under the License.
  */
 
-@use '@angular/material' as mat;
+:host {
+    height: 100%;
+}
 
 .summary-tabs {
     border-bottom-width: 1px;
