--- a/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/summary/ui/common/summary-table-filter/summary-table-filter.component.html
+++ b/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/summary/ui/common/summary-table-filter/summary-table-filter.component.html
@@ -18,7 +18,7 @@
 <div class="summary-table-filter-container">
     <div>
         <form [formGroup]="filterForm" class="my-2">
-            <div class="flex mt-2 gap-1 items-baseline">
+            <div class="flex mt-2 gap-1 items-center">
                 <div>
                     <mat-form-field subscriptSizing="dynamic">
                         <mat-label>Filter</mat-label>
