--- a/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/cluster/feature/cluster.component.html
+++ b/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/cluster/feature/cluster.component.html
@@ -15,7 +15,7 @@
   ~ limitations under the License.
   -->
 
-<div class="flex flex-col h-screen justify-between">
+<div class="flex flex-col h-full">
     <header class="mb-5 nifi-header">
         <navigation></navigation>
     </header>
@@ -40,7 +40,7 @@
                     </nav>
                 </div>
             }
-            <div class="pt-4 flex-1">
+            <div class="mt-4 flex-1">
                 <mat-tab-nav-panel #tabPanel>
                     <router-outlet></router-outlet>
                 </mat-tab-nav-panel>
