--- a/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/counters/feature/counters.component.html
+++ b/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/counters/feature/counters.component.html
@@ -15,7 +15,7 @@
   ~  limitations under the License.
   -->
 
-<div class="flex flex-col h-screen justify-between">
+<div class="flex flex-col h-full">
     <header class="mb-5 nifi-header">
         <navigation></navigation>
     </header>
