--- a/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/flow-designer/ui/canvas/canvas.component.html
+++ b/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/flow-designer/ui/canvas/canvas.component.html
@@ -15,12 +15,14 @@
   ~ limitations under the License.
   -->
 
-<div class="flex flex-col justify-between">
+<div class="flex flex-col h-full">
     <fd-header></fd-header>
     <div class="flex-1">
-        <div id="canvas-container" class="canvas-background select-none" [cdkContextMenuTriggerFor]="contextMenu.menu">
-            <graph-controls></graph-controls>
-        </div>
+        <graph-controls></graph-controls>
+        <div
+            id="canvas-container"
+            class="canvas-background select-none h-full"
+            [cdkContextMenuTriggerFor]="contextMenu.menu"></div>
         <fd-context-menu #contextMenu [menuProvider]="canvasContextMenu" menuId="root"></fd-context-menu>
     </div>
     <fd-footer></fd-footer>
