--- a/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/logout/feature/logout.component.html
+++ b/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/logout/feature/logout.component.html
@@ -15,7 +15,7 @@
   ~ limitations under the License.
   -->
 
-<div class="logout-background pt-24 pl-24 h-screen">
+<div class="logout-background pt-24 pl-24 h-full">
     <page-content [title]="'Logout successful'">
         <div class="text-sm">You have have successfully logged out. You may now close the window.</div>
     </page-content>
