--- a/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/route-not-found/feature/route-not-found.component.html
+++ b/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/route-not-found/feature/route-not-found.component.html
@@ -15,7 +15,7 @@
   ~ limitations under the License.
   -->
 
-<div class="error-background pt-24 pl-24 h-screen">
+<div class="error-background pt-24 pl-24 h-full">
     <page-content title="Route Not Found">
         <div class="text-base">The URL entered is not recognized as a supported route.</div>
     </page-content>
