--- a/nifi-frontend/src/main/frontend/apps/nifi/src/app/ui/common/advanced-ui/advanced-ui.component.html
+++ b/nifi-frontend/src/main/frontend/apps/nifi/src/app/ui/common/advanced-ui/advanced-ui.component.html
@@ -15,7 +15,7 @@
   ~ limitations under the License.
   -->
 
-<div class="flex flex-col h-screen">
+<div class="flex flex-col h-full">
     <header class="nifi-header">
         <navigation></navigation>
     </header>
