NIFI-13710: Attempting to fix the codemirror import issue across apps and lib.

--- a/nifi-frontend/src/main/frontend/apps/update-attribute/src/app/pages/update-attribute/ui/rule-listing/rule-listing.component.html
+++ b/nifi-frontend/src/main/frontend/apps/update-attribute/src/app/pages/update-attribute/ui/rule-listing/rule-listing.component.html
@@ -83,7 +83,7 @@
                         <mat-expansion-panel cdkDrag (opened)="panelOpened(rule)" (closed)="panelClosed(rule)">
                             <mat-expansion-panel-header [collapsedHeight]="'42px'" [expandedHeight]="'42px'">
                                 <mat-panel-title class="items-center">
-                                    <span class="grip mr-5 cursor-grab"></span>
+                                    <span class="grip -mt-0.5 mr-5 cursor-grab"></span>
                                     {{ rule.name }}
                                 </mat-panel-title>
                                 <mat-panel-description class="flex justify-between items-center">
